# extension-splitter-helper

./: CMakeLists.txt
src/: sh.cpp  sh.hpp  sh.pro
